# sentinel-trader-research

./: .env.example  .gitignore  DISCLAIMER.md  LICENSE  README.md  pyproject.toml
deploy/: sentinel-carry.service  sentinel-trader-backup.service  sentinel-trader-backup.timer  sentinel-trader.service
docs/: METHODOLOGY.md
sentinel/: __init__.py  config.py  main.py
sentinel/admin/: __init__.py  telegram.py
sentinel/ai/: __init__.py  _test_contract.py  backfill.py  client.py  contract.py  prompts.py  reflection.py  trainer.py
sentinel/analysis/: __init__.py  calibration.py
sentinel/backtest/: __init__.py  __main__.py  engine.py  llm_replay.py  loader.py  metrics.py  strategy.py  sweep.py
sentinel/carry/: __init__.py  __main__.py  capacity.py  executor.py  manager.py  notify.py  persistence.py  position.py  prices.py  run.py  scanner.py  simulator.py  walkforward.py
sentinel/core/: __init__.py  daily_report.py  pipeline.py  portfolio.py  positions.py  scheduler.py  watchdog.py
sentinel/exec/: __init__.py  broker.py  mexc.py  paper.py
sentinel/net/: __init__.py  dns.py
sentinel/risk/: __init__.py  engine.py  killswitch.py  sizing.py
sentinel/store/: __init__.py  db.py  models.py  repo.py
tests/: __init__.py  test_carry.py  test_carry_capacity.py  test_carry_executor.py  test_carry_manager.py  test_carry_notify.py  test_carry_persistence.py  test_carry_position.py  test_carry_walkforward.py  test_costs.py  test_engine_gates.py  test_features.py  test_sizing.py
